@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.boot.gradle.tasks.run;
 
 import java.io.File;
-import java.lang.reflect.Method;
 import java.util.Set;
 
 import org.gradle.api.file.SourceDirectorySet;
@@ -25,6 +24,7 @@ import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetOutput;
+import org.gradle.work.DisableCachingByDefault;
 
 /**
  * Custom {@link JavaExec} task for running a Spring Boot application.
@@ -32,6 +32,7 @@ import org.gradle.api.tasks.SourceSetOutput;
  * @author Andy Wilkinson
  * @since 2.0.0
  */
+@DisableCachingByDefault(because = "Application should always run")
 public class BootRun extends JavaExec {
 
 	private boolean optimizedLaunch = true;
@@ -74,9 +75,6 @@ public class BootRun extends JavaExec {
 	public void exec() {
 		if (this.optimizedLaunch) {
 			setJvmArgs(getJvmArgs());
-			if (!isJava13OrLater()) {
-				jvmArgs("-Xverify:none");
-			}
 			jvmArgs("-XX:TieredStopAtLevel=1");
 		}
 		if (System.console() != null) {
@@ -84,15 +82,6 @@ public class BootRun extends JavaExec {
 			getEnvironment().put("spring.output.ansi.console-available", true);
 		}
 		super.exec();
-	}
-
-	private boolean isJava13OrLater() {
-		for (Method method : String.class.getMethods()) {
-			if (method.getName().equals("stripIndent")) {
-				return true;
-			}
-		}
-		return false;
 	}
 
 }
